Fix gravatar link (lorempixel is no more), and crop+ellipses overflow text

--- a/web/app.css
+++ b/web/app.css
@@ -29,6 +29,11 @@
     padding: 0;
 }
 
+.user-profile {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .overlay {
     position: absolute;
     top: 0;
